# dotdir-extensions

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: publish-dotdir-marketplace.yml
csv-viewer/: package.json  vite.config.ts
csv-viewer/src/: entry.ts  viewer.ts
dsstore-viewer/: package.json
dsstore-viewer/src/: types.ts  viewer.ts
faraday-file-viewer/: package.json  vite.config.ts
faraday-file-viewer/src/: entry.ts  types.ts  viewer.ts
faraday-image-viewer/: package.json  vite.config.ts
faraday-image-viewer/src/: types.ts  viewer.ts
faraday-monaco-editor/: package.json  pnpm-lock.yaml  vite.config.ts
faraday-monaco-editor/pack/: package.json
faraday-monaco-editor/src/: editor.ts  entry.ts  types.ts
file-viewer/: package.json  vite.config.ts
file-viewer/src/: host.ts  types.ts  viewer.ts
font-viewer/: package.json  tsconfig.json  vite.config.ts
font-viewer/src/: entry.ts  types.ts  viewer.tsx
image-viewer/: package.json  vite.config.ts
image-viewer/src/: entry.ts  host.ts  nav-overlay.ts  types.ts  video-controls.ts  video-stream.ts  viewer.ts
iso-provider/: Cargo.toml  package.json
iso-provider/src/: lib.rs
monaco-editor/: package.json  tsconfig.json  vite.config.ts
pdf-viewer/: package.json  tsconfig.json  vite.config.ts
scripts/: pack.mjs  publish.mjs
shell-integration/: package.json
sqlite-editor/: package.json  vite.config.ts
vscode-languages/: README.md  package.json
zip-provider/: Cargo.toml  package.json
zip-provider/src/: lib.rs
(+13 files in other folders)
